syntax = "proto2";

package IM.Message;
import "IM.BaseDefine.proto";
option java_package = "com.mogujie.tt.protobuf";
//option java_outer_classname = "MOGUJIEIMMessage";
option optimize_for = LITE_RUNTIME;

//service id  0x0003
message IMMsgData{
	//cmd id:		0x0301
	required uint64 from_user_id = 1;				//消息发送方
	required uint64 to_session_id = 2;				//消息接受方
	required uint32 msg_id = 3;
	required uint32 create_time = 4; 
	required IM.BaseDefine.MsgType msg_type = 5;
	required bytes msg_data = 6;
	optional uint64 msg_item = 7;
	optional uint32 app_id = 20;
	optional uint32 domain_id = 21;	
	optional bytes attach_data = 22;
    optional IM.BaseDefine.ExtInfo ext_info = 23; 
}

message IMMsgPlatFormTrans{
	required IMMsgData im_msg_data = 1;
	optional bool copy_from = 2;
}

message IMMsgDataAck{
	//cmd id:		0x0302
	required uint64 user_id = 1;			//发送此信令的用户id
	required uint64 session_id = 2;				
	required uint32 msg_id = 3;
	required IM.BaseDefine.SessionType session_type = 4;
	optional uint64 msg_item = 5;
	optional uint32 create_time = 6; 
    optional IM.BaseDefine.ExtInfo ext_info = 7;
}

message IMMsgDataReadAck{
	//cmd id:		0x0303
	required uint64 user_id = 1;			//发送此信令的用户id
	required uint64 session_id = 2;			
	required uint32 msg_id = 3;
	required IM.BaseDefine.SessionType session_type = 4;
	optional uint64 msg_item = 5;
    optional IM.BaseDefine.ExtInfo ext_info = 6;
    optional uint32 domain_id = 7 [default = 1000];
}

message IMMsgDataReadNotify{
	//cmd id:		0x0304
	required uint64 user_id = 1;			//发送此信令的用户id
	required uint64 session_id = 2;		
	required uint32 msg_id = 3;
	required IM.BaseDefine.SessionType session_type = 4;
	optional uint64 msg_item = 5;
    optional IM.BaseDefine.ExtInfo ext_info = 6;
}

message IMClientTimeReq{
	//cmd id:		0x0305
}

message IMClientTimeRsp{
	//cmd id:		0x0306
	required uint32 server_time = 1;
}

message IMUnreadMsgCntReq{
	//cmd id:		0x0307
	required uint64 user_id = 1;
	optional bytes attach_data = 20;
    optional uint32 domain_id = 21 [default = 1000];	
}

message IMUnreadMsgCntReqInner{
	required uint32 app_id = 1;
    required IMUnreadMsgCntReq unread_msgCntReq = 2;
}

message IMUnreadMsgCntRsp{
	//cmd id:		0x0308
	required uint64 user_id = 1;
	required uint32 total_cnt = 2;
	repeated IM.BaseDefine.UnreadInfo unreadinfo_list = 3;
	optional bytes attach_data = 20;
}

message IMUnreadAndRecentSessionReq{
	//cmd id:		0x0312
	required uint64 user_id = 1;
	optional bytes attach_data = 20;
    optional uint32 domain_id = 21 [default = 1000];
}

message IMUnreadAndRecentSessionReqInner{
    required uint32 app_id = 1;
    required IMUnreadAndRecentSessionReq unread_recent_session_req = 2;
}

message IMUnreadAndRecentSessionRsp{
	//cmd id:		0x0313
	required uint64 user_id = 1;
    required uint32 total_unread_cnt = 2;
	repeated IM.BaseDefine.ContactListInfo contact_list = 3;
	optional bytes attach_data = 20;
}

message IMGetMsgListReq{
	//cmd id:		0x0309
	required uint64 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint64 session_id = 3;
	required uint32 msg_id_begin = 4;
	required uint32 msg_cnt = 5;
    optional uint64 msg_item = 6;
	optional bytes attach_data = 20;
    optional IM.BaseDefine.ExtInfo ext_info = 21;
    optional uint32 domain_id = 22 [default = 1000];
}

//对于群而言，如果消息数目返回的数值小于请求的cnt,则表示群的消息能拉取的到头了，更早的消息没有权限拉取。
//如果msg_cnt 和 msg_id_begin计算得到的最早消息id与实际返回的最早消息id不一致，说明服务器消息有缺失，需要
//客户端做一个缺失标记，避免下次再次拉取。
message IMGetMsgListRsp{
	//cmd id:		0x030a
	required uint64 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint64 session_id = 3;
	required uint32 msg_id_begin = 4;
	repeated IM.BaseDefine.MsgInfo msg_list = 5;
    optional uint64 msg_item = 6;
	optional bytes attach_data = 20;
    optional IM.BaseDefine.ExtInfo ext_info = 21;
}

message IMGetLatestMsgIdReq{
	//cmd id: 		0x030b
	required uint64 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint64 session_id = 3;
    optional uint64 msg_item = 4;
	optional bytes attach_data = 20;
    optional IM.BaseDefine.ExtInfo ext_info = 21;
    optional uint32 domain_id = 22 [default = 1000];
}

message IMGetLatestMsgIdRsp{
	//cmd id:		0x030c
	required uint64 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint64 session_id = 3;
	required uint32 latest_msg_id = 4;
    optional uint64 msg_item = 5;
	optional bytes attach_data = 20;
    optional IM.BaseDefine.ExtInfo ext_info = 21;
}

message IMGetMsgByIdReq{
	//cmd id: 		0x030d
	required uint64 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint64 session_id = 3; 
	repeated uint32 msg_id_list = 4;
    optional uint64 msg_item = 5;
	optional bytes attach_data = 20;
    optional IM.BaseDefine.ExtInfo ext_info = 21;
    optional uint32 domain_id = 22 [default = 1000];
}

message IMGetMsgByIdRsp{
	//cmd id:		0x030e
	required uint64 user_id = 1;
	required IM.BaseDefine.SessionType session_type = 2;
	required uint64 session_id = 3;
	repeated IM.BaseDefine.MsgInfo msg_list = 4;   // detail information
    optional uint64 msg_item = 5;
	optional bytes attach_data = 20;
    optional IM.BaseDefine.ExtInfo ext_info = 21;
}

message IMGeekCtlInner{
	required bytes user_data = 1;
        required bytes msg_data = 2;
        optional bytes attach_data = 20;
} 

message IMGeekControl{
        required uint64 user_id = 1;
        required bytes msg_data = 2;
        optional bytes attach_data = 20;
}
